<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondob"
    tools:context=".nivel1">

    <ImageView
        android:id="@+id/marco1"
        android:layout_width="225dp"
        android:layout_height="125dp"
        android:contentDescription="@string/marco1"
        android:onClick="btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        app:srcCompat="@drawable/elefante" />

    <ImageView
        android:id="@+id/marco4"
        android:layout_width="225dp"
        android:layout_height="125dp"
        android:contentDescription="@string/marco4"
        android:onClick="btn4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toEndOf="@+id/marco3"
        app:layout_constraintTop_toBottomOf="@+id/marco2"
        app:layout_constraintVertical_bias="0.385"
        app:srcCompat="@drawable/perro" />

    <ImageView
        android:id="@+id/marco3"
        android:layout_width="225dp"
        android:layout_height="125dp"
        android:contentDescription="@string/marco3"
        android:onClick="btn3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marco1"
        app:layout_constraintVertical_bias="0.382"
        app:srcCompat="@drawable/rana" />

    <ImageView
        android:id="@+id/marco2"
        android:layout_width="225dp"
        android:layout_height="125dp"
        android:contentDescription="@string/marco2"
        android:onClick="btn2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toEndOf="@+id/marco1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        app:srcCompat="@drawable/gallina" />

    <TextView
        android:id="@+id/tvjuegoenc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvjuegoenc"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/n1ejer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:text="@string/n1ejer"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvjuegoenc"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/canejer"
        android:layout_width="33dp"
        android:layout_height="25dp"
        android:text="@string/canejer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toEndOf="@+id/n1ejer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/tvretmenuenc"
        android:layout_width="75dp"
        android:layout_height="47dp"
        android:onClick="menu"
        android:text="@string/tvretmenuenc"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

</androidx.constraintlayout.widget.ConstraintLayout>